Improve browser example

--- a/examples/browser/browser-webpack-example/index.html
+++ b/examples/browser/browser-webpack-example/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="browser.css" rel="stylesheet">
+    <link href="../browser.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
   </head>
 
@@ -45,13 +45,6 @@
     <div id="status">Init</div>
     <div id="output"></div>
     <div id="writerText"></div>
-
-    <script type="text/javascript" src="lib/orbitdb.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="lib/ipfs.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="example.js" charset="utf-8"></script>
-    <script type="text/javascript" charset="utf-8">
-      // Start the example
-      main()
-    </script>
+    <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
